解决debain下的模板文件名为中文字符的问题 解决openjdk17的版本兼容性问题